Тринадцатое дз. Сдача на проверку 1.